# livraria-curso-django

./: .gitignore  db.sqlite3  pyproject.toml
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livros.py  0004_rename_livros_livro.py  0005_livro_autores.py  0006_compra.py  0007_itenscompra.py  0008_alter_compra_status.py  0009_alter_compra_status.py
livraria/: settings.py  urls.py
