[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["lucasdavid"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
